--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.15.2"
   },
   "devDependencies": {
+    "@testing-library/react": "^10.0.2",
     "nodemon": "^1.17.2"
   },
   "scripts": {
